// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilterSideBar/> Matches the snapshot for any other category, i.e. USERS 1`] = `
<aside
  className="uaa-filter-sidebar"
>
  <h1
    className="uaa-app-header"
  >
    Usage Analytics
  </h1>
  <Category />
  <DateRange />
  <Interval />
</aside>
`;

exports[`<FilterSideBar/> Matches the snapshot for category: TOP_FAVORITES 1`] = `
<aside
  className="uaa-filter-sidebar"
>
  <h1
    className="uaa-app-header"
  >
    Usage Analytics
  </h1>
  <Category />
  <EventType />
  <PageSize />
  <SortOrder />
</aside>
`;

exports[`<FilterSideBar/> Matches the snapshot for default category: FAVORITE_VIEWS 1`] = `
<aside
  className="uaa-filter-sidebar"
>
  <h1
    className="uaa-app-header"
  >
    Usage Analytics
  </h1>
  <Category />
  <DateRange />
  <Interval />
  <AggregationLevel />
  <ChartType />
</aside>
`;
